--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -3945,6 +3945,429 @@
       "source": [
         "combined_df.to_csv('./docs/technological_data.csv')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        ">>> ### Data Preprocess"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 91,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Date                     0\n",
+            "Price                    0\n",
+            "price_diff               0\n",
+            "GDP                      0\n",
+            "Inflation                0\n",
+            "Unemployment             0\n",
+            "Exchange Rate            0\n",
+            "Inflation_missing        0\n",
+            "Unemployment_missing     0\n",
+            "Exchange Rate_missing    0\n",
+            "dtype: int64\n",
+            "Date                     0\n",
+            "Price                    0\n",
+            "price_diff               0\n",
+            "GDP                      0\n",
+            "Inflation                0\n",
+            "Unemployment             0\n",
+            "Exchange Rate            0\n",
+            "Inflation_missing        0\n",
+            "Unemployment_missing     0\n",
+            "Exchange Rate_missing    0\n",
+            "dtype: int64\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>price_diff</th>\n",
+              "      <th>GDP</th>\n",
+              "      <th>Inflation</th>\n",
+              "      <th>Unemployment</th>\n",
+              "      <th>Exchange Rate</th>\n",
+              "      <th>Inflation_missing</th>\n",
+              "      <th>Unemployment_missing</th>\n",
+              "      <th>Exchange Rate_missing</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1987-05-20</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>-0.18</td>\n",
+              "      <td>2.830568e+11</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.697631e-08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2164</th>\n",
+              "      <td>1987-05-21</td>\n",
+              "      <td>18.45</td>\n",
+              "      <td>-0.18</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3460</th>\n",
+              "      <td>1987-05-22</td>\n",
+              "      <td>18.55</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4756</th>\n",
+              "      <td>1987-05-25</td>\n",
+              "      <td>18.60</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6053</th>\n",
+              "      <td>1987-05-26</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.036033e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7348</th>\n",
+              "      <td>1987-05-27</td>\n",
+              "      <td>18.60</td>\n",
+              "      <td>-0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8643</th>\n",
+              "      <td>1987-05-28</td>\n",
+              "      <td>18.60</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>6.119265e-01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9939</th>\n",
+              "      <td>1987-05-29</td>\n",
+              "      <td>18.58</td>\n",
+              "      <td>-0.02</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>6.119265e-01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11236</th>\n",
+              "      <td>1987-06-01</td>\n",
+              "      <td>18.65</td>\n",
+              "      <td>0.07</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12532</th>\n",
+              "      <td>1987-06-02</td>\n",
+              "      <td>18.68</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13829</th>\n",
+              "      <td>1987-06-03</td>\n",
+              "      <td>18.75</td>\n",
+              "      <td>0.07</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.036033e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15125</th>\n",
+              "      <td>1987-06-04</td>\n",
+              "      <td>18.78</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.036033e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16418</th>\n",
+              "      <td>1987-06-05</td>\n",
+              "      <td>18.65</td>\n",
+              "      <td>-0.13</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.070000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17716</th>\n",
+              "      <td>1987-06-08</td>\n",
+              "      <td>18.75</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19010</th>\n",
+              "      <td>1987-06-09</td>\n",
+              "      <td>18.78</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.070000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20306</th>\n",
+              "      <td>1987-06-10</td>\n",
+              "      <td>18.78</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.070000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21603</th>\n",
+              "      <td>1987-06-11</td>\n",
+              "      <td>18.68</td>\n",
+              "      <td>-0.10</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>6.119265e-01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22900</th>\n",
+              "      <td>1987-06-12</td>\n",
+              "      <td>18.78</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24192</th>\n",
+              "      <td>1987-06-16</td>\n",
+              "      <td>18.90</td>\n",
+              "      <td>0.12</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.697631e-08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25493</th>\n",
+              "      <td>1987-06-17</td>\n",
+              "      <td>19.03</td>\n",
+              "      <td>0.13</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.036033e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            Date  Price  price_diff           GDP   Inflation  Unemployment  \\\n",
+              "0     1987-05-20  18.63       -0.18  2.830568e+11  228.336163           6.8   \n",
+              "2164  1987-05-21  18.45       -0.18  4.855215e+12  228.336163           6.8   \n",
+              "3460  1987-05-22  18.55        0.10  4.855215e+12  228.336163           6.8   \n",
+              "4756  1987-05-25  18.60        0.05  4.855215e+12  228.336163           6.8   \n",
+              "6053  1987-05-26  18.63        0.03  4.855215e+12  228.336163           6.8   \n",
+              "7348  1987-05-27  18.60       -0.03  4.855215e+12  228.336163           6.8   \n",
+              "8643  1987-05-28  18.60        0.00  4.855215e+12  228.336163           6.8   \n",
+              "9939  1987-05-29  18.58       -0.02  4.855215e+12  228.336163           6.8   \n",
+              "11236 1987-06-01  18.65        0.07  4.855215e+12  228.336163           6.8   \n",
+              "12532 1987-06-02  18.68        0.03  4.855215e+12  228.336163           6.8   \n",
+              "13829 1987-06-03  18.75        0.07  4.855215e+12  228.336163           6.8   \n",
+              "15125 1987-06-04  18.78        0.03  4.855215e+12  228.336163           6.8   \n",
+              "16418 1987-06-05  18.65       -0.13  4.855215e+12  228.336163           6.8   \n",
+              "17716 1987-06-08  18.75        0.10  4.855215e+12  228.336163           6.8   \n",
+              "19010 1987-06-09  18.78        0.03  4.855215e+12  228.336163           6.8   \n",
+              "20306 1987-06-10  18.78        0.00  4.855215e+12  228.336163           6.8   \n",
+              "21603 1987-06-11  18.68       -0.10  4.855215e+12  228.336163           6.8   \n",
+              "22900 1987-06-12  18.78        0.10  4.855215e+12  228.336163           6.8   \n",
+              "24192 1987-06-16  18.90        0.12  4.855215e+12  228.336163           6.8   \n",
+              "25493 1987-06-17  19.03        0.13  4.855215e+12  228.336163           6.8   \n",
+              "\n",
+              "       Exchange Rate  Inflation_missing  Unemployment_missing  \\\n",
+              "0       1.697631e-08                  0                     1   \n",
+              "2164    1.000000e+00                  0                     1   \n",
+              "3460    1.000000e+00                  0                     1   \n",
+              "4756    1.000000e+00                  0                     1   \n",
+              "6053    2.036033e+00                  0                     1   \n",
+              "7348    1.000000e+00                  0                     1   \n",
+              "8643    6.119265e-01                  0                     1   \n",
+              "9939    6.119265e-01                  0                     1   \n",
+              "11236   1.000000e+00                  0                     1   \n",
+              "12532   1.000000e+00                  0                     1   \n",
+              "13829   2.036033e+00                  0                     1   \n",
+              "15125   2.036033e+00                  0                     1   \n",
+              "16418   2.070000e+00                  0                     1   \n",
+              "17716   1.000000e+00                  0                     1   \n",
+              "19010   2.070000e+00                  0                     1   \n",
+              "20306   2.070000e+00                  0                     1   \n",
+              "21603   6.119265e-01                  0                     1   \n",
+              "22900   1.000000e+00                  0                     1   \n",
+              "24192   1.697631e-08                  0                     1   \n",
+              "25493   2.036033e+00                  0                     1   \n",
+              "\n",
+              "       Exchange Rate_missing  \n",
+              "0                          0  \n",
+              "2164                       0  \n",
+              "3460                       0  \n",
+              "4756                       0  \n",
+              "6053                       0  \n",
+              "7348                       0  \n",
+              "8643                       0  \n",
+              "9939                       0  \n",
+              "11236                      0  \n",
+              "12532                      0  \n",
+              "13829                      0  \n",
+              "15125                      0  \n",
+              "16418                      0  \n",
+              "17716                      0  \n",
+              "19010                      0  \n",
+              "20306                      0  \n",
+              "21603                      0  \n",
+              "22900                      0  \n",
+              "24192                      0  \n",
+              "25493                      0  "
+            ]
+          },
+          "execution_count": 91,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(combined_data.isna().sum())\n",
+        "\n",
+        "combined_data[['GDP', 'Unemployment']] = combined_data[['GDP', 'Unemployment']].fillna(\n",
+        "    combined_data[['GDP', 'Unemployment']].median()\n",
+        ")\n",
+        "\n",
+        "print(combined_data.isna().sum())\n",
+        "\n",
+        "combined_data.head(20)"
+      ]
     }
   ],
   "metadata": {
