--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -4368,6 +4368,153 @@
         "\n",
         "combined_data.head(20)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        ">>> ### EDA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 92,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>price_diff</th>\n",
+              "      <th>GDP</th>\n",
+              "      <th>Inflation</th>\n",
+              "      <th>Unemployment</th>\n",
+              "      <th>Exchange Rate</th>\n",
+              "      <th>Inflation_missing</th>\n",
+              "      <th>Unemployment_missing</th>\n",
+              "      <th>Exchange Rate_missing</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1987-05-20</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>-0.18</td>\n",
+              "      <td>2.830568e+11</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.697631e-08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2164</th>\n",
+              "      <td>1987-05-21</td>\n",
+              "      <td>18.45</td>\n",
+              "      <td>-0.18</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3460</th>\n",
+              "      <td>1987-05-22</td>\n",
+              "      <td>18.55</td>\n",
+              "      <td>0.10</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4756</th>\n",
+              "      <td>1987-05-25</td>\n",
+              "      <td>18.60</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>1.000000e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6053</th>\n",
+              "      <td>1987-05-26</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>4.855215e+12</td>\n",
+              "      <td>228.336163</td>\n",
+              "      <td>6.8</td>\n",
+              "      <td>2.036033e+00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Date  Price  price_diff           GDP   Inflation  Unemployment  \\\n",
+              "0    1987-05-20  18.63       -0.18  2.830568e+11  228.336163           6.8   \n",
+              "2164 1987-05-21  18.45       -0.18  4.855215e+12  228.336163           6.8   \n",
+              "3460 1987-05-22  18.55        0.10  4.855215e+12  228.336163           6.8   \n",
+              "4756 1987-05-25  18.60        0.05  4.855215e+12  228.336163           6.8   \n",
+              "6053 1987-05-26  18.63        0.03  4.855215e+12  228.336163           6.8   \n",
+              "\n",
+              "      Exchange Rate  Inflation_missing  Unemployment_missing  \\\n",
+              "0      1.697631e-08                  0                     1   \n",
+              "2164   1.000000e+00                  0                     1   \n",
+              "3460   1.000000e+00                  0                     1   \n",
+              "4756   1.000000e+00                  0                     1   \n",
+              "6053   2.036033e+00                  0                     1   \n",
+              "\n",
+              "      Exchange Rate_missing  \n",
+              "0                         0  \n",
+              "2164                      0  \n",
+              "3460                      0  \n",
+              "4756                      0  \n",
+              "6053                      0  "
+            ]
+          },
+          "execution_count": 92,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "combined_data.head()"
+      ]
     }
   ],
   "metadata": {
